KIN-959 fixes alignment issue

--- a/src/shared/components/book-appointment/book-appointment-overview/BookAppointmentOverviewComponent.scss
+++ b/src/shared/components/book-appointment/book-appointment-overview/BookAppointmentOverviewComponent.scss
@@ -152,7 +152,6 @@
           font-size: 14px;
           line-height: 16px;
           display: flex;
-          align-items: center;
           color: #83909D;
           padding: 9px;
         }
